<resources>
    <string name="app_name">CareSpoon</string>
    <string name="hello_blank_fragment">CareSpoon</string>
    <string name="google_login_client_id">323712967939-3th6ofmcggofa7dbqikk7mqajoob4qs7.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id">care_spoon_channel</string>

    <!-- toast -->
    <string name="preparing">준비 중인 기능입니다.</string>
    <string name="do_not_contain_dot">고유 코드는 . 을 포함할 수 없습니다.</string>
    <string name="no_user">해당하는 유저가 없습니다.</string>
    <string name="delete">친구 목록에서 삭제되었습니다.</string>
    <string name="add">친구 목록에 추가되었습니다.</string>
    <string name="capture_ing">처리 중입니다.</string>
    <string name="capture_fail">촬영 대상이 올바르지 않습니다.</string>
    <string name="capture_done">촬영이 완료되었습니다.</string>
    <string name="fill_all">정보를 모두 입력해주세요.</string>

    <!-- splash -->
    <string name="splash_description">Personal Health Care Service</string>

    <!-- sign -->
    <string name="sign_google">Sign in with Google</string>
    <string name="sign_basic">로그인</string>
    <string name="sign_NoAccount">계정이 없으신가요?</string>
    <string name="sign_signUp">회원가입</string>

    <!-- sign up -->
    <string name="signUp_user_type">어떤 유형의 사용자이신가요?</string>
    <string name="signUp_general">일반 사용자</string>
    <string name="signUp_viewer">보호자</string>
    <string name="signUp_next">다음</string>

    <!-- sign up done -->
    <string name="signUpDone_done">시작하기</string>
    <string name="signUpDone_birth">생년월일</string>
    <string name="signUpDone_birth_ex">8자리 숫자</string>
    <string name="signUpDone_sex">성별</string>
    <string name="signUpDone_female">여</string>
    <string name="signUpDone_male">남</string>
    <string name="signUpDone_height">키</string>
    <string name="signUpDone_height_ex">단위: cm</string>
    <string name="signUpDone_weight">체중</string>
    <string name="signUpDone_weight_ex">단위: kg</string>

    <!-- main -->
    <string name="main_hello">안녕하세요,&#160;&#160;</string>
    <string name="main_bang">님!</string>
    <string name="main_breakfast">오늘 아침은\n무엇을 드셨나요?</string>
    <string name="main_lunch">오늘 점심은\n무엇을 드셨나요?</string>
    <string name="main_dinner">오늘 저녁은\n무엇을 드셨나요?</string>
    <string name="main_add">눌러서 사진 추가하기</string>
    <string name="main_greeting">무엇을 도와드릴까요?</string>
    <string name="main_statistics">영양 통계</string>
    <string name="main_record">식단 기록</string>
    <string name="main_share">공유하기</string>


    <!-- camera -->
    <string name="camera_title">카메라</string>

    <!-- statistics -->
    <string name="statistics_title">영양 통계</string>
    <string name="statistics_mon">월</string>
    <string name="statistics_tue">화</string>
    <string name="statistics_wed">수</string>
    <string name="statistics_thu">목</string>
    <string name="statistics_fri">금</string>
    <string name="statistics_sat">토</string>
    <string name="statistics_sun">일</string>
    <string name="statistics_kcal">kcal</string>
    <string name="statistics_recommend">하루 권장 섭취량 : </string>
    <string name="statistics_recommend_m">한 달 권장 섭취량 : </string>
    <string name="statistics_carbohydrate">탄수화물</string>
    <string name="statistics_protein">단백질</string>
    <string name="statistics_fat">지방</string>

    <!-- record -->
    <string name="record_title">식단 기록</string>
    <string name="record_breakfast">아침</string>
    <string name="record_lunch">점심</string>
    <string name="record_dinner">저녁</string>
    <string name="record_carbohydrate">탄 :</string>
    <string name="record_protein">단 :</string>
    <string name="record_fat">지 :</string>
    <string name="record_gram">g</string>
    <string name="record_kcal">kcal</string>

    <!-- record detail-->
    <string name="record_detail_title">식사에 대한 영양 정보 분석입니다</string>
    <string name="record_detail_c">탄수화물 :</string>
    <string name="record_detail_p">단백질 :</string>
    <string name="record_detail_f">지방 :</string>
    <string name="record_detail_n">나트륨 :</string>
    <string name="record_detail_ca">칼슘 :</string>
    <string name="record_detail_fe">철분 :</string>
    <string name="record_detail_total">총 섭취량 :</string>
    <string name="record_detail_full">충분해요 !</string>
    <string name="record_detail_lack">부족해요..</string>


    <!-- friends -->
    <string name="friends_title">공유하기</string>
    <string name="friends_unique_code">나의 고유 코드</string>
    <string name="friends_search">친구의 이름을 검색해보세요.</string>
    <string name="friends_delete">삭제</string>

    <!-- Add friends -->
    <string name="add_friend_title">친구 추가</string>
    <string name="add_friend_search">친구의 고유코드를 검색해보세요.</string>
    <string name="add_friend_add">추가</string>
    <string name="add_friend_null">검색 결과가 없습니다.</string>


    <!-- Settings -->
    <string name="settings_title">설정</string>
    <string name="settings_notification">알림 받기</string>
    <string name="settings_account">계정</string>
    <string name="settings_info">정보 변경</string>
    <string name="settings_delete">회원 탈퇴</string>
    <string name="settings_about">서비스 정보</string>
    <string name="settings_opensource">오픈 소스</string>
    <string name="settings_policy">개인 정보 정책</string>
    <string name="settings_developers">개발자 정보</string>

    <!-- ChangeInfo -->
    <string name="changeInfo_title">정보 변경</string>
    <string name="changeInfo_name">이름</string>
    <string name="changeInfo_enter_name">이름을 입력하세요</string>
    <string name="changeInfo_change">변경하기</string>

    <!-- DeleteAccount -->
    <string name="delete_title">계정 삭제</string>
    <string name="delete_done">삭제하기</string>

</resources>